--- a/src/main.scss
+++ b/src/main.scss
@@ -1,3 +1,7 @@
-@import "variables.scss";
+@import "uikit/variables.scss";
 
 @import "../node_modules/bootstrap/scss/bootstrap";
+
+@import "uikit/custom.scss";
+@import "uikit/font.scss";
+@import "uikit/type.scss";
