Added card component

--- a/src/main.scss
+++ b/src/main.scss
@@ -2,6 +2,7 @@
 
 @import "../node_modules/bootstrap/scss/bootstrap";
 
+@import "uikit/card.scss";
 @import "uikit/custom.scss";
 @import "uikit/font.scss";
 @import "uikit/type.scss";
