--- a/src/uikit/variables.scss
+++ b/src/uikit/variables.scss
@@ -4,7 +4,10 @@
 
 // scss-docs-start gray-color-variables
 $white:    #fff !default;
-$black:    #000 !default;
+$gray-100: #DFE0EB !default;
+$gray-200: #A4A6B3 !default;
+$gray-300: #9FA2B4 !default;
+$black:    #252733 !default;
 // scss-docs-end gray-color-variables
 
 // scss-docs-start theme-color-variables
@@ -23,21 +26,20 @@ $dark:          #363740;
 // Settings for the `<body>` element.
 
 $body-bg:                   $white !default;
-$body-color:                #252733;
+$body-color:                $black;
 
-// Typography
+// Links
 //
-// Font, line-height, and color for body text, headings, and more.
+// Style anchor elements.
 
-// scss-docs-start font-variables
-// stylelint-disable value-keyword-case
-$font-family-sans-serif:      'Mulish', sans-serif;
-
-$h1-font-size:                1.5rem;
-$h2-font-size:                1.188rem;
-// scss-docs-end font-variables
+$link-color:                              $primary !default;
+$link-decoration:                         none;
+$link-shade-percentage:                   20% !default;
+$link-hover-color:                        shift-color($link-color, $link-shade-percentage) !default;
+$link-hover-decoration:                   none;
 
 // Spacers
+$spacer: 1.5rem !default;
 $spacers: (
   0: 0,
   1: 10px,
@@ -70,3 +72,37 @@ $spacers: (
   28: 280px,
   29: 290px,
 );
+
+// Typography
+//
+// Font, line-height, and color for body text, headings, and more.
+
+// scss-docs-start font-variables
+// stylelint-disable value-keyword-case
+$font-family-sans-serif:      'Mulish', sans-serif;
+
+$h1-font-size:                1.5rem;
+$h2-font-size:                1.188rem;
+// scss-docs-end font-variables
+
+// scss-docs-start headings-variables
+$headings-margin-bottom:      12px;
+$headings-font-weight:        700 !default;
+// scss-docs-end headings-variables
+
+$prefix:                      bs- !default;
+
+// Components
+
+// scss-docs-start border-radius-variables
+$border-radius:               8px !default;
+// scss-docs-end border-radius-variables
+
+// Cards
+
+// scss-docs-start card-variables
+$card-spacer-y:                     $spacer !default;
+$card-spacer-x:                     $spacer !default;
+$card-border-color:                 $gray-100;
+$card-border-radius:                $border-radius !default;
+// scss-docs-end card-variables
