Fixed logo link color on hover

--- a/src/uikit/custom.scss
+++ b/src/uikit/custom.scss
@@ -23,6 +23,10 @@
         svg {
             margin-right: 12px;
         }
+
+        &:hover {
+            color: $primary;
+        }
     }
 }
 
