--- a/src/uikit/variables.scss
+++ b/src/uikit/variables.scss
@@ -85,6 +85,13 @@ $h1-font-size:                1.5rem;
 $h2-font-size:                1.188rem;
 // scss-docs-end font-variables
 
+// scss-docs-start type-variables
+$lead-font-size:              16px;
+$lead-font-weight:            600;
+
+$small-font-size:             12px;
+// scss-docs-end type-variables
+
 // scss-docs-start headings-variables
 $headings-margin-bottom:      12px;
 $headings-font-weight:        700 !default;
