--- a/src/uikit/variables.scss
+++ b/src/uikit/variables.scss
@@ -9,6 +9,7 @@ $gray-200: #DDE2FF !default;
 $gray-300: #A4A6B3 !default;
 $gray-400: #9FA2B4 !default;
 $gray-500: #60626E !default;
+$gray-600: #C5C7CD !default;
 $black:    #252733 !default;
 // scss-docs-end gray-color-variables
 
@@ -116,6 +117,24 @@ $border-color:                $gray-100 !default;
 $border-radius:               8px !default;
 // scss-docs-end border-variables
 
+// scss-docs-start form-check-variables
+$form-check-input-active-filter:          brightness(90%) !default;
+
+$form-check-input-border-radius:          50% !default;
+$form-check-radio-border-radius:          50% !default;
+// scss-docs-end form-check-variables
+
+// Buttons
+//
+// For each of Bootstrap's buttons, define text, background, and border color.
+
+// scss-docs-start btn-variables
+$btn-padding-y:               0.313rem !default;
+$btn-padding-x:               0.75rem !default;
+$btn-font-size:               0.688rem !default;
+$btn-line-height:             1 !default;
+// scss-docs-end btn-variables
+
 // Cards
 
 // scss-docs-start card-variables
@@ -143,6 +162,23 @@ $dropdown-link-hover-color:         $white;
 $dropdown-link-hover-bg:            $primary;
 
 // List group
+
+// scss-docs-start form-input-variables
+$input-padding-x:                       0;
+$input-font-size:                       0.875rem !default;
+$input-font-weight:                     600;
+
+$input-bg:                              transparent;
+
+$input-color:                           $body-color !default;
+$input-border-color:                    transparent;
+$input-border-width:                    0;
+
+$input-focus-border-color:              tint-color($primary, 50%) !default;
+
+$input-placeholder-color:               $gray-600 !default;
+$input-plaintext-color:                 $body-color !default;
+// scss-docs-end form-input-variables
 
 // scss-docs-start list-group-variables
 $list-group-border-radius:          0;
