--- a/src/uikit/custom.scss
+++ b/src/uikit/custom.scss
@@ -223,6 +223,11 @@ nav.sidebar-menu {
             padding: 0 2rem;
         }
 
+        .create-task {
+            border: none;
+            padding: 0;
+        }
+
         .list-group {
             .list-group-item {
                 border: none;
