Added fieldset tag on form, minor fixes on some texts, changed link font size to be 14px

--- a/src/uikit/type.scss
+++ b/src/uikit/type.scss
@@ -1,4 +1,8 @@
 // all my type styles here
+a {
+    font-size: 0.875rem;
+}
+
 @each $color, $value in $grays {
     .gray-#{$color} {
         color: $value !important;
